--- a/app/views/pages/homeadm.ejs
+++ b/app/views/pages/homeadm.ejs
@@ -33,7 +33,7 @@
           <input type="text" placeholder="Buscar...">
         </form>
         <ul>
-          <li><a href="/homeadm"><img src="imagem/perfil/perfil vintelo.png" class="maria"></a></li>
+          <li><a href="/homeadm"><img src="/imagens/icone sem cadastro.png" class="maria"></a></li>
           <li><a href="/homeadm"><img src="imagens/icone saco.png" class="img-tamanho"></a></li>
           <li><a href="/homeadm"><img src="imagens/icone coraçao.png" class="img-tamanho2"></a></li>
         </ul>
@@ -58,7 +58,7 @@
             <li>
               <a href="/homeadm">
                 <section class="profile-section">
-                  <img src="imagem/perfil/perfil vintelo.png" alt="Admin" class="profile-pic icone-sem-cadastro">
+                  <img src="/imagens/icone sem cadastro.png" alt="Admin" class="profile-pic icone-sem-cadastro">
                   <section class="profile-info">
                     <h2>Administrador</h2>
                   </section>
@@ -101,7 +101,7 @@
         </nav>
         <img src="imagens/logo.png" class="logo">
         <a href="/homeadm">
-          <img src="imagem/perfil/perfil vintelo.png" class="logo" />
+          <img src="/imagens/icone sem cadastro.png" class="logo" />
         </a>
       </nav>
     </header>
